Bug Fix in 'OllirExprVisitor' - toList() method does not exist